--- a/aa_bb/templates/aa_bb/index.html
+++ b/aa_bb/templates/aa_bb/index.html
@@ -169,7 +169,8 @@ async function loadSuspiciousContracts(option, idx) {
     source.onerror = err => {
       source.close();
       const errorMessages = document.getElementById('errorMessages');
-      errorMessages.innerHTML = '<div class="alert alert-warning">Contract stream failed, wait a minute and load the page again.</div>';
+      errorMessages.innerHTML = '<div class="alert alert-warning">Contract stream failed, wait a minute for pre fetch to finish and load the page again.</div>';
+      updateCardStatus(idx, true);
       reject(err);
     };
   });
@@ -229,7 +230,8 @@ async function loadSuspiciousMails(option, idx) {
     source.onerror = err => {
       source.close();
       const errorMessages = document.getElementById('errorMessages');
-      errorMessages.innerHTML = '<div class="alert alert-warning">Mail stream failed, wait a minute and load the page again.</div>';
+      errorMessages.innerHTML = '<div class="alert alert-warning">Mail stream failed, wait a minute for pre fetch to finish and load the page again.</div>';
+      updateCardStatus(idx, true);
       reject(err);
     };
   });
