--- a/aa_bb/templates/paps/history.html
+++ b/aa_bb/templates/paps/history.html
@@ -13,7 +13,7 @@
 
   <div class="text-center">
     {% if chart_exists %}
-      <img src="/templates/paps/charts/pap_chart_{{ year }}_{{ month }}.png" alt="PAP Chart" class="img-fluid">
+      <img src="/media/pap_chart_{{ year }}_{{ month }}.png" alt="PAP Chart" class="img-fluid">
     {% else %}
       <p>No chart available for {{ month }}/{{ year }}.</p>
     {% endif %}
