--- a/aa_bb/templates/faq/faq.html
+++ b/aa_bb/templates/faq/faq.html
@@ -34,6 +34,6 @@
 </dl>
 
 <p class="text-muted small">
-  {% translate "Still stuck? PM Andrew Xadi on discord so we can grow this list." %}
+  {% translate "Still stuck? Contact support so we can grow this list." %}
 </p>
 {% endblock %}
