--- a/aa_bb/templates/faq/settings_paps.html
+++ b/aa_bb/templates/faq/settings_paps.html
@@ -32,12 +32,12 @@
         <td>{% translate "Ceiling on how many corp PAPs count after modifiers are applied." %}</td>
       </tr>
       <tr>
-        <td><code>lawn_modifier</code></td>
+        <td><code>alliance_modifier</code></td>
         <td>{% translate "Multiplier for alliance PAPs." %}</td>
       </tr>
       <tr>
-        <td><code>imp_modifier</code></td>
-        <td>{% translate "Multiplier for IMP PAPs." %}</td>
+        <td><code>coalition_modifier</code></td>
+        <td>{% translate "Multiplier for coalition PAPs." %}</td>
       </tr>
     </tbody>
   </table>
