--- a/aa_bb/templates/aa_bb/base.html
+++ b/aa_bb/templates/aa_bb/base.html
@@ -1,3 +1,7 @@
+<!--
+  Base shell for the member-facing Big Brother pages.
+  Provides the AA layout and exposes a `details` block that individual tabs fill.
+-->
 {% extends 'allianceauth/base-bs5.html' %}
 
 {% load i18n %}
