--- a/aa_bb/templates/faq/base.html
+++ b/aa_bb/templates/faq/base.html
@@ -1,3 +1,6 @@
+<!--
+  Base layout for the Big Brother manual/FAQ section with its own nav menu.
+-->
 {% extends 'allianceauth/base-bs5.html' %}
 {% load i18n %}
 
