--- a/aa_bb/templates/faq/cards.html
+++ b/aa_bb/templates/faq/cards.html
@@ -1,3 +1,6 @@
+<!--
+  Reference page documenting what each dashboard card presents and why.
+-->
 {% extends 'faq/base.html' %}
 {% load i18n %}
 
