--- a/aa_bb/templates/faq/modules.html
+++ b/aa_bb/templates/faq/modules.html
@@ -1,3 +1,7 @@
+<!--
+  Overview of the optional modules (BigBrother, CorpBrother, etc.) and
+  what work remains before each is considered active.
+-->
 {% extends 'faq/base.html' %}
 {% load i18n %}
 
