--- a/aa_bb/templates/faq/settings_tickets.html
+++ b/aa_bb/templates/faq/settings_tickets.html
@@ -1,3 +1,6 @@
+<!--
+  TicketToolConfig reference table describing each threshold and Discord hook.
+-->
 {% extends 'faq/base.html' %}
 {% load i18n %}
 
