--- a/aa_bb/templates/loa/_loa_subtabs.html
+++ b/aa_bb/templates/loa/_loa_subtabs.html
@@ -1,4 +1,6 @@
-{# templates/loa/_loa_subtabs.html #}
+{# templates/loa/_loa_subtabs.html
+   Secondary nav used within the LOA interface to switch between the member
+   listing and the admin review panel while preserving active state. #}
 <ul class="nav nav-pills mb-4">
   <li class="nav-item">
     <a
