--- a/aa_bb/templates/loa/admin.html
+++ b/aa_bb/templates/loa/admin.html
@@ -1,3 +1,7 @@
+<!--
+  Administration table for reviewing, filtering, and approving LOA requests.
+  Includes filter controls plus per-row action forms wired up to the LOA views.
+-->
 {% extends 'loa/base.html' %}
 {% load static %}
 
