--- a/aa_bb/templates/loa/base.html
+++ b/aa_bb/templates/loa/base.html
@@ -1,3 +1,8 @@
+<!--
+  Base layout for the Leave of Absence (LOA) interface.
+  Injects the LOA nav menu into the AA header and exposes a `details` block
+  so individual LOA views only render their main panel.
+-->
 {% extends 'allianceauth/base-bs5.html' %}
 
 {% load i18n %}
