--- a/aa_bb/templates/loa/disabled.html
+++ b/aa_bb/templates/loa/disabled.html
@@ -1,3 +1,6 @@
+<!--
+  Placeholder message for when the LOA feature is turned off globally.
+-->
 {% extends 'aa_bb/base.html' %}
 {% load i18n %}
 {% load humanize %}
