--- a/aa_bb/templates/loa/index.html
+++ b/aa_bb/templates/loa/index.html
@@ -1,3 +1,7 @@
+<!--
+  Member-facing LOA listing that shows the user's past/pending requests,
+  color-coded by status with inline delete controls for pending entries.
+-->
 {% extends 'loa/base.html' %}
 {% load static %}
 
