--- a/aa_bb/templates/aa_cb/base.html
+++ b/aa_bb/templates/aa_cb/base.html
@@ -1,3 +1,8 @@
+<!--
+  Base layout for the Corp Brother pages.
+  Provides the AllianceAuth bootstrap shell and a placeholder `details` block
+  so child templates only worry about their panel content.
+-->
 {% extends 'allianceauth/base-bs5.html' %}
 
 {% load i18n %}
