--- a/aa_bb/templates/faq/menu.html
+++ b/aa_bb/templates/faq/menu.html
@@ -1,3 +1,6 @@
+<!--
+  Manual/FAQ navigation rail; highlights the active subsection based on the URL name.
+-->
 {% load i18n %}
 {% if perms.aa_bb.basic_access %}
     <li class="nav-item">
