--- a/aa_bb/templates/faq/settings_paps.html
+++ b/aa_bb/templates/faq/settings_paps.html
@@ -1,3 +1,6 @@
+<!--
+  Documentation for each PapsConfig field used by the PAP generator and audits.
+-->
 {% extends 'faq/base.html' %}
 {% load i18n %}
 
