--- a/aa_bb/templates/loa/menu.html
+++ b/aa_bb/templates/loa/menu.html
@@ -1,3 +1,7 @@
+<!--
+  LOA-specific nav links rendered inside the AA navbar.
+  Shows request/admin entries depending on the viewer's permissions.
+-->
 {% load i18n %}
 {% if perms.aa_bb.can_access_loa %}
     <li class="nav-item">
