--- a/aa_bb/templates/loa/request.html
+++ b/aa_bb/templates/loa/request.html
@@ -1,3 +1,7 @@
+<!--
+  Form for submitting a new LOA request with bootstrap validation feedback.
+  Keeps inputs inline rather than relying on Django's default form rendering.
+-->
 {% extends 'loa/base.html' %}
 {% load static %}
 
