--- a/aa_bb/templates/paps/base.html
+++ b/aa_bb/templates/paps/base.html
@@ -1,3 +1,7 @@
+<!--
+  Base layout for PAP statistics views.
+  Injects the PAP nav menu into the AA header and exposes a `details` block.
+-->
 {% extends 'allianceauth/base-bs5.html' %}
 
 {% load i18n %}
