--- a/aa_bb/templates/paps/disabled.html
+++ b/aa_bb/templates/paps/disabled.html
@@ -1,3 +1,6 @@
+<!--
+  Message rendered when PAP stats are globally disabled to avoid confusing users.
+-->
 {% extends 'aa_bb/base.html' %}
 {% load i18n %}
 {% load humanize %}
