--- a/aa_bb/templates/paps/history.html
+++ b/aa_bb/templates/paps/history.html
@@ -1,3 +1,7 @@
+<!--
+  Simple viewer for previously generated PAP charts.
+  Provides a month/year selector and renders the PNG directly from media.
+-->
 {% extends 'paps/base.html' %}
 {% load static %}
 
