--- a/aa_bb/templates/paps/menu.html
+++ b/aa_bb/templates/paps/menu.html
@@ -1,3 +1,6 @@
+<!--
+  PAP-specific navbar links controlled by the viewer's permissions.
+-->
 {% load i18n %}
 {% if perms.aa_bb.can_access_paps %}
     <li class="nav-item">
