--- a/aa_bb/templates/paps/index.html
+++ b/aa_bb/templates/paps/index.html
@@ -26,7 +26,7 @@
     <input type="hidden" name="year" value="{{ year }}">
 
     <div class="mb-3">
-      <label for="bulk_data">Paste PAP data (Player LAWN IMP, tab/space-separated):</label>
+      <label for="bulk_data">Paste PAP data (Player Alliance Coalition, tab/space-separated):</label>
       <textarea name="bulk_data" rows="10" class="form-control">{{ bulk_data|default:'' }}</textarea>
     </div>
 
